--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron": "^13.1.9"
   },
   "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
