--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.59",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.59",
     "@electron-forge/maker-zip": "^6.0.0-beta.59",
-    "electron": "^13.1.9"
+    "electron": "^13.1.9",
+    "electron-rebuild": "^3.1.1"
   },
   "dependencies": {
     "electron-reload": "^2.0.0-alpha.1",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-serve": "^1.1.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.3"
   },
   "config": {
     "forge": {
